# applied-llm

./: .gitignore  Langchain.ipynb  README.md  pyproject.toml  requirements.txt
Fictitious_restaurant_with_menu/: README.md
Fictitious_restaurant_with_menu/backend/: restaurant_and_menu_generator_server.py
Fictitious_restaurant_with_menu/frontend/: app.py
NewsResearchTool/: README.md
NewsResearchTool/backend/: STT_using_whisper.py  speech_to_text.py  text_to_speech.py  tool_based_RAG.py
NewsResearchTool/frontend/: app.py
SQL_agent/: README.md
SQL_agent/backend/: sql_agent.py
SQL_agent/frontend/: app.py
